--- a/hawc/templates/includes/sidebar.html
+++ b/hawc/templates/includes/sidebar.html
@@ -57,7 +57,9 @@
       </ul>
     </li>
   {% endif %}
-
+  <li class="{{li_class}}">
+    <a class="{{a_class}}" href="{% url 'search' %}">Search</a>
+  </li>
   {% if feature_flags.ENABLE_DOCS_LINK and user.is_authenticated %}
     {% if expand_docs %}
       {% include 'docs/components/sidebar_docs_tree.html' %}
