flip column header labels

--- a/hawc/apps/study/templates/study/fragments/clone_fetch.html
+++ b/hawc/apps/study/templates/study/fragments/clone_fetch.html
@@ -84,8 +84,8 @@
       {% bs4_colgroup '50,50' %}
       <thead>
         <tr>
-          <th>Source<a class="ml-1 btn btn-light" href="{% url 'riskofbias:arob_detail' assessment.id %}" {% anchor_new_tab %}>View</a></th>
-          <th>Destination<a class="ml-1 btn btn-light" href="{% url 'riskofbias:arob_detail' src_assessment.id %}" {% anchor_new_tab %}>View</a></th>
+          <th>Destination<a class="ml-1 btn btn-light" href="{% url 'riskofbias:arob_detail' assessment.id %}" {% anchor_new_tab %}>View</a></th>
+          <th>Source<a class="ml-1 btn btn-light" href="{% url 'riskofbias:arob_detail' src_assessment.id %}" {% anchor_new_tab %}>View</a></th>
         </tr>
       </thead>
       <tbody>
