--- a/hawc/apps/summary/templates/summary/visual_list.html
+++ b/hawc/apps/summary/templates/summary/visual_list.html
@@ -26,7 +26,7 @@
           <td>
             <div>
               {% debug_badge object.id %}
-              <a class="text-nowrap" href="{{object.get_absolute_url}}">{{object.title}}</a>
+              <a href="{{object.get_absolute_url}}">{{object.title}}</a>
               {% if not object.published %}<i class="fa fa-eye-slash mx-1" title="Unpublished (not be visible to the public)" aria-hidden="true"></i>{% endif %}
             </div>
             <div class="d-flex flex-wrap">
