--- a/hawc/templates/admin/base.html
+++ b/hawc/templates/admin/base.html
@@ -2,12 +2,12 @@
 
 {% load i18n %}
 {% load static %}
-{% load render_bundle from webpack_loader %}
+{% comment %} {% load render_bundle from webpack_loader %} {% endcomment %}
 
 {% block extrahead %}
   <script type="text/javascript" src="{% static 'vendor/jquery/3.7.0/jquery.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'vendor/htmx/2.0.3/htmx.min.js' %}"></script>
-  {% render_bundle 'main' %}
+  {% comment %} {% render_bundle 'main' %} {% endcomment %}
 {% endblock %}
 
 {% block userlinks %}
