--- a/hawc/apps/eco/templates/eco/design_update.html
+++ b/hawc/apps/eco/templates/eco/design_update.html
@@ -71,7 +71,7 @@
 
 {% block extrajs %}
   <script type="text/javascript">
-    $(window).ready(function() {
+    $(document).ready(function() {
       window.app.HAWCUtils.addScrollHtmx("eco-edit-row", "eco-obj-row");
     });
   </script>
