--- a/hawc/apps/epi/templates/epi/comparisonset_form.html
+++ b/hawc/apps/epi/templates/epi/comparisonset_form.html
@@ -26,7 +26,7 @@
 
 {% block extrajs %}
   <script type="text/javascript">
-    window.addEventListener("DOMContentLoaded", function(){
+    $(document).ready(function() {
       new window.app.DynamicFormset($('#gFormset'), 'form', {oneFormRequired: true});
       $('#gFormset').insertBefore($('#gcForm .form-actions'));
     });
