--- a/hawc/apps/epiv2/templates/epiv2/design_update.html
+++ b/hawc/apps/epiv2/templates/epiv2/design_update.html
@@ -127,11 +127,13 @@
 {% block extrajs %}
   {% include "common/htmx_autocomplete.html" %}
   <script type="text/javascript">
-    window.app.startup("epiv2Startup", function(app){
-      app.formStartup(document);
-    });
-    $(window).ready(function() {
-      window.app.HAWCUtils.addScrollHtmx("epiv2-edit-row", "epiv2-obj-row");
+    $(document).ready(function() {
+      window.app.startup("epiv2Startup", function(app){
+        app.formStartup(document);
+      });
+      $(window).ready(function() {
+        window.app.HAWCUtils.addScrollHtmx("epiv2-edit-row", "epiv2-obj-row");
+      });
     });
   </script>
 {% endblock %}
