--- a/hawc/apps/summary/templates/summary/visual_detail_dp.html
+++ b/hawc/apps/summary/templates/summary/visual_detail_dp.html
@@ -32,16 +32,18 @@
 
 {% block extrajs %}
   <script type="text/javascript">
-    $('#loading_div').html(window.app.HAWCUtils.loading())
-    window.app.startup("dataPivotStartup", function(app){
-      app.DataPivot.get_object({{object.id}}, function(dp){
-        $('#loading_div').fadeOut(function(){
-          dp.build_data_pivot_vis($('#dp_display'));
+    $(document).ready(function() {
+      $('#loading_div').html(window.app.HAWCUtils.loading())
+      window.app.startup("dataPivotStartup", function(app){
+        app.DataPivot.get_object({{object.id}}, function(dp){
+          $('#loading_div').fadeOut(function(){
+            dp.build_data_pivot_vis($('#dp_display'));
+          });
         });
+        window.app.startup("smartTagsStartup", function(smartTags){
+          new smartTags.SmartTagContainer($('#caption'), {showOnStartup: true});
+        })
       });
-      window.app.startup("smartTagsStartup", function(smartTags){
-        new smartTags.SmartTagContainer($('#caption'), {showOnStartup: true});
-      })
     });
   </script>
 {% endblock %}
