--- a/hawc/apps/summary/templates/summary/visual_detail_prisma.html
+++ b/hawc/apps/summary/templates/summary/visual_detail_prisma.html
@@ -26,11 +26,13 @@
 {% block extrajs %}
   {{ config|json_script:"config" }}
   <script type="text/javascript">
-    window.app.startup("summaryStartup", function(summary){
-      window.isEditable = {{obj_perms.edit|lower}};
-      const config = JSON.parse(document.getElementById('config').textContent),
-            el = document.getElementById('visualization');
-      summary.startupPrismaAppRender(el, config.settings, config.data, config);
+    $(document).ready(function() {
+      window.app.startup("summaryStartup", function(summary){
+        window.isEditable = {{obj_perms.edit|lower}};
+        const config = JSON.parse(document.getElementById('config').textContent),
+              el = document.getElementById('visualization');
+        summary.startupPrismaAppRender(el, config.settings, config.data, config);
+      });
     });
   </script>
 {% endblock %}
