--- a/hawc/apps/summary/templates/summary/visual_form_django.html
+++ b/hawc/apps/summary/templates/summary/visual_form_django.html
@@ -9,9 +9,11 @@
   {{ smart_tag_form.media }}
   {{ config|json_script:"config" }}
   <script type="text/javascript">
-    window.app.startup("summaryFormsStartup", function(summaryForms){
-      const config = window.app.getConfig();
-      summaryForms.startup(config);
+    $(document).ready(function() {
+      window.app.startup("summaryFormsStartup", function(summaryForms){
+        const config = window.app.getConfig();
+        summaryForms.startup(config);
+      });
     });
   </script>
 {% endblock %}
