--- a/hawc/apps/udf/templates/udf/udf_list.html
+++ b/hawc/apps/udf/templates/udf/udf_list.html
@@ -17,6 +17,8 @@
 
 {% block extrajs %}
   <script>
-    window.app.HAWCUtils.dynamicFormListeners();
+    $(document).ready(function() {
+      window.app.HAWCUtils.dynamicFormListeners();
+    });
   </script>
 {% endblock extrajs %}
