--- a/hawc/templates/includes/hero_access.html
+++ b/hawc/templates/includes/hero_access.html
@@ -4,6 +4,8 @@
   }
 </script>
 <script type="text/javascript">
-  const data = JSON.parse(document.getElementById('heroAccess').textContent);
-  window.app.HAWCUtils.Hero.setAccess(data.heroAccess);
+  $(document).ready(function(){
+    const data = JSON.parse(document.getElementById('heroAccess').textContent);
+    window.app.HAWCUtils.Hero.setAccess(data.heroAccess);
+  });
 </script>
