--- a/hawc/apps/animal/templates/animal/dosingregime_form.html
+++ b/hawc/apps/animal/templates/animal/dosingregime_form.html
@@ -7,16 +7,18 @@
 
 {% block extrajs %}
   <script type="text/javascript">
+    $(document).ready(() => {
       // reorganize forms
-    var actions = $('.form-actions');
-    $('#doseGroupsDiv').insertBefore($('.form-actions'))
+      var actions = $('.form-actions');
+      $('#doseGroupsDiv').insertBefore($('.form-actions'))
 
-    var dose_types = {{dose_types|safe}},
-        dose_values = {{dose_groups_json|safe}};
+      var dose_types = {{dose_types|safe}},
+          dose_values = {{dose_groups_json|safe}};
 
-    window.app.startup("animalStartup", function(animal){
-      new animal.DosingRegimeForm($("#dosing_regime"), dose_types, dose_values);
-    })
-    $('#id_route_of_exposure').focus();
+      window.app.startup("animalStartup", function(animal){
+        new animal.DosingRegimeForm($("#dosing_regime"), dose_types, dose_values);
+      })
+      $('#id_route_of_exposure').focus();
+    });
   </script>
 {% endblock extrajs %}
