--- a/hawc/apps/epi/templates/epi/exposure_form.html
+++ b/hawc/apps/epi/templates/epi/exposure_form.html
@@ -15,7 +15,7 @@
 
 {% block extrajs %}
   <script type="text/javascript">
-    window.addEventListener("DOMContentLoaded", function () {
+    $(document).ready(function() {
       new window.app.DynamicFormset($('#ctFormset'), 'form', { oneFormRequired: true });
       $('#ctFormset').insertBefore($('.form-actions'));
     });
