--- a/hawc/apps/epi/templates/epi/group_form.html
+++ b/hawc/apps/epi/templates/epi/group_form.html
@@ -31,7 +31,7 @@
 
 {% block extrajs %}
   <script type="text/javascript">
-    window.addEventListener("DOMContentLoaded", function(){
+    $(document).ready(function() {
       new window.app.DynamicFormset($('#gnFormset'), 'form', {oneFormRequired: true});
       $('#gnFormset').insertBefore($('#gForm .form-actions'));
     });
