--- a/hawc/apps/epi/templates/epi/outcome_detail.html
+++ b/hawc/apps/epi/templates/epi/outcome_detail.html
@@ -28,9 +28,11 @@
 
 {% block extrajs %}
   <script type="text/javascript">
-    const id = {{object.id}};
-    window.app.startup("epiStartup", function(app){
-      app.Outcome.displayFullPager($("#objContainer"), id);
+    $(document).ready(function() {
+      const id = {{object.id}};
+      window.app.startup("epiStartup", function(app){
+        app.Outcome.displayFullPager($("#objContainer"), id);
+      });
     });
   </script>
 {% endblock %}
