--- a/hawc/apps/epi/templates/epi/studypopulation_detail.html
+++ b/hawc/apps/epi/templates/epi/studypopulation_detail.html
@@ -31,9 +31,11 @@
 
 {% block extrajs %}
   <script type="text/javascript">
-    const id = {{object.id}};
-    window.app.startup("epiStartup", function(app){
-      app.StudyPopulation.displayFullPager($("#objContainer"), id);
+    $(document).ready(function() {
+      const id = {{object.id}};
+      window.app.startup("epiStartup", function(app){
+        app.StudyPopulation.displayFullPager($("#objContainer"), id);
+      });
     });
   </script>
 {% endblock %}
