--- a/hawc/apps/invitro/templates/invitro/ivcelltype_detail.html
+++ b/hawc/apps/invitro/templates/invitro/ivcelltype_detail.html
@@ -6,11 +6,13 @@
 
 {% block extrajs %}
   <script type="text/javascript">
-    const canEdit = {{obj_perms.edit|lower}},
-          id = {{object.id}};
-    window.app.startup("invitroStartup", function(app){
-      window.canEdit = canEdit;
-      app.IVCellType.displayAsPage(id, $("#ivCellType"));
+    $(document).ready(function() {
+      const canEdit = {{obj_perms.edit|lower}},
+            id = {{object.id}};
+      window.app.startup("invitroStartup", function(app){
+        window.canEdit = canEdit;
+        app.IVCellType.displayAsPage(id, $("#ivCellType"));
+      });
     });
   </script>
 {% endblock %}
