--- a/hawc/templates/admin/base.html
+++ b/hawc/templates/admin/base.html
@@ -2,12 +2,13 @@
 
 {% load i18n %}
 {% load static %}
-{% comment %} {% load render_bundle from webpack_loader %} {% endcomment %}
+{% load django_vite %}
 
 {% block extrahead %}
   <script type="text/javascript" src="{% static 'vendor/jquery/3.7.0/jquery.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'vendor/htmx/2.0.3/htmx.min.js' %}"></script>
-  {% comment %} {% render_bundle 'main' %} {% endcomment %}
+  {% vite_hmr_client %}
+  {% vite_asset 'index.js' %}
 {% endblock %}
 
 {% block userlinks %}
