Migrate frontend from webpack to vite (#1181)
* Migrate frontend build and test to Vite, enable JSX in .js, update decorators, fix parser imports, and update DataPivot utilities

* convert modules

* updates from debugging

* continue migration to vite

* wrap startup commands in $(document).ready()

* change export format to es for peggy parsers

* fix lit import

* format

* run no vite dev in integration tests

* keep chipping away

* fix d3.cloud import

* remove many unused dependencies

* fix review recommendations

* simplify vite imports from webpack

* add back a few deps

--- a/hawc/templates/base.html
+++ b/hawc/templates/base.html
@@ -1,6 +1,6 @@
 {% load cache %}
 {% load static %}
-{% load render_bundle from webpack_loader %}
+{% load django_vite %}
 
 <!DOCTYPE html>
 <html class="js" lang="en-us">
@@ -100,7 +100,8 @@
     <script type="text/javascript" src="{% static 'vendor/jquery/3.7.0/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'vendor/bootstrap/4.6.2/js/bootstrap.bundle.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'vendor/htmx/2.0.3/htmx.min.js' %}"></script>
-    {% render_bundle 'main' %}
+    {% vite_hmr_client %}
+    {% vite_asset 'index.js' %}
     {% if form %}{{ form.media }}{% endif %}
     {% block extrajs %}{% endblock %}
   </body>
