--- a/hawc/apps/assessment/templates/assessment/assessment_detail.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_detail.html
@@ -52,6 +52,11 @@
           {% endif %}
           <a class="dropdown-item" href="{% url 'assessment:bulk-publish' object.pk %}">Publish items</a>
         {% endif %}
+        {% if user.is_staff %}
+          <div class="dropdown-divider"></div>
+          <span class="dropdown-header">Administrative</span>
+          <a class="dropdown-item" href="{% admin_url object %}">Admin Page</a>
+        {% endif %}
       {% endactions %}
     {% endif %}
   </div>
