--- a/hawc/templates/403.html
+++ b/hawc/templates/403.html
@@ -6,7 +6,7 @@
 {% block content %}
   <div class="jumbotron">
     {% if user.is_authenticated %}
-      <img alt="A red danger light indicating user access is denied." class='float-right' src="{% static '/img/hal.png' %}" style="max-height:250px; margin-left: 20px;">
+      <img alt="A red danger light indicating user access is denied." class='float-right' src="{% static 'img/hal.png' %}" style="max-height:250px; margin-left: 20px;">
       <h2>403. Forbidden.</h2>
       <p>I'm sorry Dave, I'm afraid I can't do that. </p>
       <p>
